# exophora_estimator

./: .gitignore
exophora_estimator/: CMakeLists.txt  README.md  package.xml  setup.py
exophora_estimator/data/: gpt3_api.txt  gpt3_org.txt  object_place.csv
exophora_estimator/data/human_position/: data_acquisiton.py  wrist_eye.csv  wrist_eye_1data.csv  wrist_eye_miss_pointing.csv  wrist_eye_no_demonstrative.csv  wrist_eye_no_demonstrative_2.csv  wrist_eye_no_object.csv  wrist_eye_no_object_2.csv  wrist_eye_no_pointing.csv
exophora_estimator/src/exophora_estimator/: __init__.py  cv_get_xyz_from_yolo_state.py  exophora_estimator.py  location_estimator.py  non_realtime_exophora.py  object_conf.csv  realtime_exophora.py
exophora_estimator/src/exophora_estimator/Baseline/: base_vgpn.py
exophora_estimator/src/exophora_estimator/Original/: realtime_exophora.py
exophora_estimator/src/exophora_estimator/modules/: calculate_pointing_vector.py  dataset.py  demonstrative_region_estimator.py  get_pose_landmark.py  output_graph.py  pointing_estimator.py  visualize_pointing_trajectory.py
